update notable apertures to use OO segmented API

--- a/docs/source/How-tos/Notable-Telescope-Apertures.ipynb
+++ b/docs/source/How-tos/Notable-Telescope-Apertures.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "otherwise-bonus",
    "metadata": {},
    "source": [
     "# Notable Telescope Apertures\n",
@@ -25,7 +24,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "billion-ethnic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,25 +31,23 @@
     "\n",
     "from prysm.coordinates import make_xy_grid, cart_to_polar\n",
     "from prysm.geometry import spider, circle, offset_circle\n",
-    "from prysm.segmented import composite_hexagonal_aperture\n",
+    "from prysm.segmented import CompositeHexagonalAperture\n",
     "\n",
     "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "functional-suite",
    "metadata": {},
    "source": [
     "## HST\n",
     "\n",
-    "HST has a primary mirror of diameter 2.4 m with 32% linear obscuration, and four spiders of 38 mm diameter rotated 45$^\\circ$ from the cardinal axes.  There are an additional three small circular obscurations from pads used to secure the primary mirror.  The pads are 95% of the way to the edge of the mirror at ccw angles w.r.t. the x axis of -45, -165, and +75 degrees and have each a diameter of 150 mm."
+    "HST has a primary mirror of diameter 2.4 m with 32% linear obscuration, and four spiders of 38 mm diameter rotated 45$^\\circ$ from the cardinal axes.  There are an additional three small circular obscurations from pads used to secure the primary mirror.  The pads are 90% of the way to the edge of the mirror at ccw angles w.r.t. the x axis of -45, -165, and +75 degrees and have each a diameter of 150 mm."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "returning-perth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +62,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "drawn-solomon",
    "metadata": {},
    "source": [
     "After shading the primary, we now compute the spider and pad obscurations:"
@@ -75,7 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "literary-freeware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,18 +89,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "colonial-bacon",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pad_centers"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "entitled-tiffany",
    "metadata": {},
    "source": [
     "## JWST\n",
@@ -118,7 +101,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suitable-announcement",
    "metadata": {},
    "source": [
     "JWST is a 2-ring segmented hexagonal design.  The central segment is missing, and there is a upside-down \"Y\" strut system to hold the secondary.  The segments are 1.32 m flat-to-flat, with 7 mm airgaps between.  We first paint the hexagons:"
@@ -127,20 +109,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "basic-child",
    "metadata": {},
    "outputs": [],
    "source": [
     "x, y = make_xy_grid(512, diameter=6.6)\n",
     "\n",
-    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(2, 1.32, 0.007, x, y, exclude=(0,))\n",
+    "cha = CompositeHexagonalAperture(x,y,2,1.32,0.007,exclude=(0,))\n",
     "\n",
-    "plt.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])"
+    "plt.imshow(cha.amp, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "mysterious-matter",
    "metadata": {},
    "source": [
     "And create the secondary struts, adding them to the mask:"
@@ -149,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bored-hometown",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +136,12 @@
     "m2 = spider(1, .1, x, y, rotation=-60)\n",
     "m3 = spider(1, .1, x, y, rotation=90)\n",
     "spider_ = m1&m2&m3\n",
-    "plt.imshow(mask&spider_, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "plt.imshow(cha.amp&spider_, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
     "plt.title('Fully composited JWST aperture')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "owned-scholar",
    "metadata": {},
    "source": [
     "## TMT\n",
@@ -174,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "statewide-aquarium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,17 +162,16 @@
     "vtov_to_flat_to_flat = 1 / flat_to_flat_to_vertex_vertex\n",
     "\n",
     "segdiam = vtov_to_flat_to_flat * 1.44\n",
-    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(13, segdiam, 2.5e-3, x, y, exclude=[])\n",
+    "cha = CompositeHexagonalAperture(x,y,13,segdiam,0.0025)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15,15))\n",
-    "ax.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
-    "for center, id_ in zip(centers, segment_ids):\n",
+    "ax.imshow(cha.amp, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "for center, id_ in zip(cha.all_centers, cha.segment_ids):\n",
     "    plt.text(*center, id_, ha='center', va='center')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "separated-combine",
    "metadata": {},
    "source": [
     "The inner ring and center segment should be excluded, and only 6 segments exist per horizontal side, nor should the most extreme \"columns\" be present.  The topmost segments are also not present.  Let's start with this as an exclusion list:"
@@ -204,7 +180,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "major-newport",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,21 +188,17 @@
     "    469, 470, 508, 509, 507, 510, 506, 545, 471, 511, 505, 544, 472, 397, 433, # top, bottom\n",
     "    534, 533, 532, 531, 521, 522, 523, 524, # left edge\n",
     "    482, 483, 484, 485, 495, 494, 493, 492, # right edge\n",
-    "    #421, 420, 419, 409, 410, 411,\n",
-    "    #445, 446, 447, 457, 456, 455\n",
     "]\n",
     "\n",
-    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(13, segdiam, 2.5e-3, x, y, exclude=exclude)\n",
-    "\n",
+    "cha = CompositeHexagonalAperture(x,y,13,segdiam,0.0025, exclude=exclude)\n",
     "fig, ax = plt.subplots(figsize=(15,15))\n",
-    "ax.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
-    "for center, id_ in zip(centers, segment_ids):\n",
+    "ax.imshow(cha.amp, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "for center, id_ in zip(cha.all_centers, cha.segment_ids):\n",
     "    plt.text(*center, id_, ha='center', va='center')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "traditional-validation",
    "metadata": {},
    "source": [
     "Next we can see that the diagonal \"corners\" are too large.  With the exclusion list below, we can create a TMT pupil, excepting struts and SM obscuration, in only two lines of code."
@@ -236,7 +207,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noted-spell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,15 +219,13 @@
     "    536, 537, 479, 480, 497, 498, 519, 518, # next 'diagonal' from corners\n",
     "]\n",
     "\n",
-    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(13, segdiam, 2.5e-3, x, y, exclude=exclude)\n",
-    "\n",
+    "cha = CompositeHexagonalAperture(x,y,13,segdiam,0.0025, exclude=exclude)\n",
     "fig, ax = plt.subplots(figsize=(15,15))\n",
-    "ax.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])"
+    "ax.imshow(cha.amp, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "boxed-christian",
    "metadata": {},
    "source": [
     "The TMT secondary obscuration is of 3.65 m diameter, we add it and struts of 50 cm diameter that are equiangular:"
@@ -266,18 +234,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occasional-farmer",
    "metadata": {},
    "outputs": [],
    "source": [
     "spider_ = spider(3, .5, x, y, rotation=90)\n",
     "sm_obs = ~circle(3.65/2, r)\n",
-    "plt.imshow(mask&spider_&sm_obs, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])"
+    "plt.imshow(cha.amp&spider_&sm_obs, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "champion-egyptian",
    "metadata": {},
    "source": [
     "Last of all are the six cables, of 20 mm diameter.  These are a bit tricky, but they have a meeting point at 90% the radius of the SM obscuration.  We will form them similar to the JWST and LUVOIR-A spiders, by shifting the coordinate grid and specifying the angle.  The angles are about 10$^\\circ$ from the radial normal."
@@ -286,7 +252,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bright-healing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,13 +274,12 @@
     "\n",
     "cables = cable1&cable2&cable3&cable4&cable5&cable6\n",
     "fig, ax = plt.subplots(figsize=(15,15))\n",
-    "ax.imshow(mask&spider_&sm_obs&cables, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "ax.imshow(cha.amp&spider_&sm_obs&cables, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
     "ax.set_title('Fully composited TMT aperture')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "abandoned-sport",
    "metadata": {},
    "source": [
     "## LUVOIR-A\n",
@@ -326,23 +290,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "injured-integration",
    "metadata": {},
    "outputs": [],
    "source": [
     "x, y = make_xy_grid(512, diameter=15)\n",
     "\n",
-    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(6, 1.223, 0.007, x, y, exclude=(0,))\n",
-    "\n",
+    "cha = CompositeHexagonalAperture(x,y,6,1.223,0.007)\n",
     "fig, ax = plt.subplots(figsize=(10,10))\n",
-    "ax.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
-    "for center, id_ in zip(centers, segment_ids):\n",
+    "ax.imshow(cha.amp, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "for center, id_ in zip(cha.all_centers, cha.segment_ids):\n",
     "    plt.text(*center, id_)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "recent-success",
    "metadata": {},
    "source": [
     "Note that we have discarded all of the other information from the composition process, which will be identical to the previous invocation.  We now add the spider, pretty much the same as JWST:"
@@ -351,7 +312,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collect-directive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,19 +325,18 @@
     "    121\n",
     "]\n",
     "\n",
-    "*_, mask = composite_hexagonal_aperture(6, 1.223, 0.007, x, y, exclude=exclude)\n",
+    "cha = CompositeHexagonalAperture(x,y,6,1.223,0.007, exclude=exclude)\n",
     "\n",
     "m1 = spider(1, .2, x, y, rotation=-105)\n",
     "m2 = spider(1, .2, x, y, rotation=-75)\n",
     "m3 = spider(1, .2, x, y, rotation=90)\n",
     "spider_ = m1&m2&m3\n",
-    "plt.imshow(mask&spider_, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "plt.imshow(cha.amp&spider_, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
     "plt.title('Fully composited LUVOIR-A aperture')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "experimental-balance",
    "metadata": {},
    "source": [
     "## LUVOIR-B\n",
@@ -388,24 +347,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "delayed-space",
    "metadata": {},
    "outputs": [],
    "source": [
     "x, y = make_xy_grid(512, diameter=8)\n",
     "\n",
-    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(4, 0.955, 0.007, x, y, exclude=[])\n",
+    "cha = CompositeHexagonalAperture(x,y,4,.955,.007)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10,10))\n",
-    "ax.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
-    "for center, id_ in zip(centers, segment_ids):\n",
+    "ax.imshow(cha.amp, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "for center, id_ in zip(cha.all_centers, cha.segment_ids):\n",
     "    plt.text(*center, id_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "knowing-primary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,14 +375,15 @@
     "    57\n",
     "]\n",
     "\n",
-    "*_, mask = composite_hexagonal_aperture(4, 0.955, 0.007, x, y, exclude=exclude)\n",
-    "plt.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "cha = CompositeHexagonalAperture(x,y,4,.955,.007, exclude=exclude)\n",
+    "\n",
+    "\n",
+    "plt.imshow(cha.amp, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
     "plt.title('Fully composited LUVOIR-B aperture')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "coral-disclosure",
    "metadata": {},
    "source": [
     "## HabEx-A\n",
@@ -436,7 +394,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "instant-detroit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +407,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charged-defeat",
    "metadata": {},
    "source": [
     "## HabEx-B\n",
@@ -461,15 +417,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wrong-nepal",
    "metadata": {},
    "outputs": [],
    "source": [
     "x, y = make_xy_grid(512, diameter=6.5)\n",
     "\n",
-    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(3, 0.825, 0.007, x, y, exclude=[])\n",
+    "# vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(3, 0.825, 0.007, x, y, exclude=[])\n",
+    "cha = CompositeHexagonalAperture(x,y,3,.825,0.007)\n",
     "\n",
-    "plt.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "plt.imshow(cha.amp, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
     "plt.title('Fully composited HabEx B pupil')"
    ]
   }
@@ -490,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
