progress on docs updates, some typos, remove flipud from dat/datx read

--- a/docs/source/explanation/how-prysm-works.ipynb
+++ b/docs/source/explanation/how-prysm-works.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "## Grids\n",
     "\n",
-    "All functions in prysm operate on arrays, taking the relevant coordinates as arguments, e.g. $x$ and $y$ or $\\rho$ and \\$theta$.  No functions take anything like `sample_count` or `npix` as arguments.  This is to keep the library simple, and prevent any disagreement on assumptions about whether an array is inter-sample centered (not containing a zero element for even-size arrays) or fft-centered (containing a zero element always).  It is not meaningfully different to pass `npix` everywhere or pass `x, y`.\n",
+    "All functions in prysm operate on arrays, taking the relevant coordinates as arguments, e.g. $x$ and $y$ or $\\rho$ and $\\theta$.  No functions take anything like `sample_count` or `npix` as arguments.  This is to keep the library simple, and prevent any disagreement on assumptions about whether an array is inter-sample centered (not containing a zero element for even-size arrays) or fft-centered (containing a zero element always).  It is not meaningfully different to pass `npix` everywhere or pass `x, y`.\n",
     "\n",
     "For example, if you want to evaluate polynomials on a grid you already have handy, you would just import the relevant function(s).  Here `make_xy_grid` and `cart_to_polar` are imported to create the grid, but they operate on and return ordinary arrays and are not special."
    ]
@@ -50,6 +50,8 @@
    "source": [
     "We will gloss over for a moment that the Zernike polynomials are orthogonal over the unit disk and the image contains points outside that domain.\n",
     "\n",
+    "Many problems have multiple planes which require different grids.  For example, a simple image chain problem has three principle grids; that for the pupil, for the PSF, and for the Fourier domain of the PSF.  These must all be managed separately.  The [image chain modeling]() tutorial shows an example of this.\n",
+    "\n",
     "## Functions and Types\n",
     "\n",
     "If you use prysm for physical optics, you will find that it is predominantly composed of functions which the user can combine into higher level concepts with relatively few classes.  This is a conscious choice; we believe that it is easier to learn functions than type systems, and functions are often more composable than types, allowing fine-grained control of what operations are performed.\n",
@@ -60,15 +62,7 @@
     "\n",
     "In this way, any slow calculations that need not be in loops may easily be kept out of loops by the user, an any repetitive calculations may be cached by the user without introducing any complexity into the underlying software.\n",
     "\n",
-    "There are two exceptions to this:\n",
-    "\n",
-    "- optical propagation\n",
-    "\n",
-    "- interferometric data\n",
-    "\n",
-    "The reason these are exceptions is that it would be very repetitive to chain all of the necessary metadata through each function call, so a series of methods chained on classes fits the problem better.\n",
-    "\n",
-    "The entry point to interferometric analysis is loading a data file.  The entry point to optical propagation and diffraction are assembling the machinery to model pupils and other elements of the system and either running the code once, or many times either to iterate the model, or optimize elements of the system.\n",
+    "Prysm does have some object-oriented interfaces, but these exist for bundling metadata only.\n",
     "\n",
     "## dx, or x?\n",
     "\n",
