--- a/docs/source/tutorials/Lens-MTF-Model.ipynb
+++ b/docs/source/tutorials/Lens-MTF-Model.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "$$ \\text{MTF}\\left(\\nu_x,\\nu_y\\right) = \\left| \\mathfrak{F}\\left[\\text{PSF}\\left(x,y\\right)\\right] \\right| $$\n",
     "\n",
-    "To make this tutorial a bit more interesting, we will use an N-sided aperture, as if our lens were stopped down and has a finite number of aperture blades.  We will also assume no vignetting.  Instead of Hopkins' polynomials as used previously, we will use Zernike polynomials which are orthogonal over the unit disk.  Everything scales with F/#, but we'll assume its 8 and the focal length is 50 mm as reasonable photographic examples."
+    "To make this tutorial a bit more interesting, we will use an N-sided aperture, as if our lens were stopped down and has a finite number of aperture blades.  We will also assume no vignetting.  Instead of Hopkins' polynomials as used previously, we will use Zernike polynomials which are orthogonal over the unit disk.  Everything scales with F/#, but we'll assume its 8 and the focal length is 50 mm as reasonable photographic examples.\n",
+    "\n",
+    "The first step in this model is to form the aperture:"
    ]
   },
   {
@@ -23,8 +25,6 @@
    "source": [
     "from prysm.coordinates import make_xy_grid, cart_to_polar\n",
     "from prysm.geometry import regular_polygon\n",
-    "\n",
-    "from prysm.polynomials import zernike_nm\n",
     "\n",
     "from matplotlib import pyplot as plt"
    ]
@@ -43,8 +43,9 @@
     "r, t = cart_to_polar(x, y)\n",
     "radius = efl/fno/2\n",
     "rho = r / radius\n",
+    "n_sides = 14\n",
     "\n",
-    "aperture = regular_polygon(7, radius, x, y)\n",
+    "aperture = regular_polygon(n_sides, radius, x, y)\n",
     "\n",
     "plt.imshow(aperture, origin='lower')"
    ]
@@ -53,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will assume for the moment that the illumination is monochromatic, as a separate tutorial deals with polychromatic propagation.  We will also assume the correction of the lens is so-so at its maximum aperture of F/1.4, and decide somewhat arbitrarily that it improves by 20% for each stop the F/# is reduced.  F/1.4 to F/8 is 5 stops, so we have 1.2^5 reduction in wavefront error.  There is no physical basis for these assumptions, but they are being made by the user, not the library."
+    "Once we have our model of the aperture, we can model its phase error and compute the PSF.  We will assume for the moment that the illumination is monochromatic, as a separate tutorial deals with polychromatic propagation.  We'll assume, too, that there's $\\lambda/14$ RMS of wavefront error; the lens just meets the Marechal Criteria for \"diffraction limited.\""
    ]
   },
   {
@@ -62,13 +63,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from prysm.polynomials import zernike_nm\n",
     "from prysm.propagation import Wavefront\n",
     "wvl = 0.55 # mid visible band, um\n",
     "\n",
-    "full_aperture_opd = wvl*0.75*1e3 # nm, 3/4 of a wave, 1e3 = um to nm\n",
-    "reduced_opd = full_aperture_opd / (1.5**5)\n",
+    "wfe_nm_rms = wvl/14*1e3 # nm, 3/4 of a wave, 1e3 = um to nm\n",
     "mode = zernike_nm(4, 0, rho, t)\n",
-    "opd = mode * reduced_opd\n",
+    "opd = mode * wfe_nm_rms\n",
     "pup = Wavefront.from_amp_and_phase(aperture, opd, wvl, dx)\n",
     "coherent_psf = pup.focus(efl, Q=2)"
    ]
@@ -88,14 +89,14 @@
    "source": [
     "from prysm.otf import mtf_from_psf, diffraction_limited_mtf\n",
     "psf = coherent_psf.intensity\n",
-    "mtf = mtf_from_psf(psf, psf.dx)"
+    "mtf = mtf_from_psf(psf)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the diffraction limited MTF for a circular aperture, but it's close enough for the septagon example.\n",
+    "This is the diffraction limited MTF for a circular aperture, but it's close enough for the 14-gon example.\n",
     "\n",
     "We can start by plotting the X and Y slices of the MTF.  If we are on axis, or aligned to a cartesian axis of the image plane, these are the tangential and sagittal MTFs."
    ]
@@ -118,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see the lens would be far from diffraction limited for a broad range of frequencies, and that the x and y MTFs are identical.  The latter follows from spherical aberration, $Z_4^0$ being rotationally invariant.  What if the lens had an equivalent amount of coma?"
+    "We can see the lens has a bit lower MTF than the diffraction limit.  In other words, _the Marechal criteria does not mean lens MTF == diffraction limit_, even thought the lens is \"diffraction limited.\"  We can also see the x and y MTFs are identical, since spherical aberration, $Z_4^0$ is rotationally invariant.  What if the lens had an equivalent amount of coma?"
    ]
   },
   {
@@ -127,9 +128,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_opd = full_aperture_opd / (1.5**5)\n",
-    "mode = zernike_nm(3, 1, rho, t)\n",
-    "opd = mode * reduced_opd\n",
+    "wfe_nm_rms = wvl/14*1e3\n",
+    "mode = zernike_nm(3, 1, rho, t) # only this line changed\n",
+    "opd = mode * wfe_nm_rms\n",
     "pup = Wavefront.from_amp_and_phase(aperture, opd, wvl, dx)\n",
     "coherent_psf = pup.focus(efl, Q=2)\n",
     "psf = coherent_psf.intensity\n",
@@ -145,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The MTF would be a bit higher, but it no longer would rotationally invariant."
+    "Now we can see a similar level of departure from the diffraction limit, and it varies as a function of the angle in k-space (\"tangential\" and \"sagittal,\" in this case)"
    ]
   },
   {
@@ -182,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
