--- a/docs/source/releases/v0.20.rst
+++ b/docs/source/releases/v0.20.rst
@@ -5,7 +5,7 @@ prysm v0.20
 Summary
 =======
 
-Version 20 of prysm is the largest breaking release the library has ever had.  Your programs will be more a bit verbose when written in this style, but they will be more clear, contain fewer bugs, and run faster.  This version marks prysm transitioning from an extremely object oriented style to a data oriented style.  The result is that code is more direct, and there is less of it.  Side benefits are that by deferring the caches that used to help keep prysm fast to the user level, the user is in control over their program's memory usage.
+Version 20 of prysm is the largest breaking release the library has ever had.  Your programs will be more a bit verbose when written in this style, but they will be more clear, contain fewer bugs, and run faster.  This version marks prysm transitioning from an extremely object oriented style to a data oriented style.  The result is that code is more direct, and there is less of it.  Side benefits are that by deferring the caches that used to help keep prysm fast to the user level, the user is in control over their program's memory usage.  A new high level object oriented API may be produced at some point, likely in a separate package.
 
 This version will produce one more zero point release (0.21) for cleanup after longer experience in this style, after which version 1 will be released.  In addition to the breaking changes, this release brings landmark additions of **2D-Q polynomials**, also known as Forbes polynomials, **Chebyshev, Legendre, and Hopkins polynomials,** and **sophistocated tools for segmented apertures**.
 
@@ -15,34 +15,7 @@ The remainder of this page will be divided by logical unit of function, then sub
 Changes
 =======
 
-.. toctree::
-
-    bayer
-    conf
-    convolution
-    coordinates
-    degredations
-    detector
-    fttools
-    geometry
-    interferogram
-    io
-    jacobi
-    mathops
-    mtf_utils
-    objects
-    otf
-    plotting
-    propagation
-    psf
-    qpoly
-    refractive
-    sample_data
-    thinfilm
-    thinlens
-    util
-    wavelength
-
+.. contents::
 
 
 bayer
@@ -165,41 +138,154 @@ jacobi
 
 See the new polynomials module.
 
-qpoly
------
 
-See the new polynomials module.
-
-pupil
------
-
-- this entire submodule has been removed.  To synthesize pupil functions which have given phase and amplitude, combine prysm.geometry with prysm.zernike or other phase synthesis code.  The function :func:`~prysm.propagation.Wavefront.from_phase_amplitude` largely replicates the behavior of the :code:`Pupil` constructor, with the user generating their own phase and amplitude arrays.
-
-zernike
+objects
 -------
 
-- Stand-alone functions for the first few terms have been removed, use zernike_nm with one of the naming convention functions to replace the behavior:
-- - :func:`piston`
-- - :func:`tip`
-- - :func:`tilt`
-- - :func:`defocus`
-- - :func:`primary_astigmatism_00`
-- - :func:`primary_astigmatism_45`
-- - :func:`primary_coma_y`
-- - :func:`primary_coma_x`
-- - :func:`primary_spherical`
-- - :func:`primary_trefoil_x`
-- - :func:`primary_trefoil_y`
-- - e.g., :code:`for primary_coma_y`, either :code:`zernike_nm(3, 1, ...)` or :code:`zernike_nm(*zernike_noll_to_nm(7), ...)`
-- classes :class:`FringeZernike`, :class:`NollZernike`, :class:`ANSI1TermZernike`, :class:`ANSI2TermZernike` have been removed.  This is part of a stylistic change of prysm from extremely object oriented to data oriented.  Combine :func:`~prysm.zernike.zernike_nm` with one of the naming functions to replace the phase synthesis behavior.
-- new function :func:`~prysm.zernike.zernike_nm_sequence` -- use to compute a series of Zernike polynomials.  Much faster than :func:`~prysm.zernike.zernike_nm` in a loop.  Returns a generator.
+The changes to this module are similar to geometry.  Functions no longer take a samples argument, but take x/y or r,t grids directly.  Objects which have analytic fourier transforms retain functions to compute those.
+
+- :class:`Slit` has been removed, use :func:`~prysm.objects.slit` and :func:`~prysm.objects.slit_ft`
+- :class:`Pinhole` has been removed, use :func:`~prysm.objects.pinhole` and :func:`~prysm.objects.pinhole_ft`
+- :class:`SiemensStar` has been removed, use :func:`~prysm.objects.siemensstar`
+- :class:`TiltedSquare` has been removed, use :func:`~prysm.objects.tiltedsquare`
+- :class:`SlantedEdge` has been removed, use :func:`~prysm.objects.slantededge`
+- :class:`Chirp` was removed without replacement
+- :class:`Grating` was removed without replacement
+- :class:`GratingArray` was removed without replacement
+
+
+otf
+---
+
+The OTF module was maed data oriented instead of object oriented, in line with the rest of the changes to prysm in this release.  Note that the three functions below accept both arrays, and :class:`~prysm._richdata.RichData`-like objects with data and dx attributes, and return :class:`~prysm._richdata.RichData` objects.
+
+- :class:`MTF` was removed, use :func:`~prysm.otf.mtf_from_psf`
+- :class:`PTF` was removed, use :func:`~prysm.otf.ptf_from_psf`
+- :class:`OTF` was removed, use :func:`~prysm.otf.otf_from_psf`
+
+polynomials
+-----------
+
+prysm's support of polynomials has been unified under a single package.  The polynomials package is now the fastest known for the supported polynomials, e.g. beating POPPY by more than a factor of 100 on large collections of Zernike polynomials.  This speed introduces mild complexity into the API, which must be appreciated. For a complete tutorial see :doc:`Ins and Outs of Polynomials <../explanation/Ins-and-Outs-of-Polynomials>`.
+
+- :code:`prysm.polynomials/` - top level routines, common to any basis set:
+- - :func:`~prysm.polynomials.lstsq` for least-squares fitting of 2D basis functions to data
+- - :func:`~prysm.polynomials.sum_of_2d_modes` for (weighted) summing 2D modes.  This function does what :code:`zernike_compose` or :code:`zernike_sum` does in other packages, once the user has the basis set in hand.
+- :func:`~prysm.polynomials.sum_of_xy_modes` some polynomial bases, like the Legendre and Chebyshev polynomials, are separable in the x, y dimensions.  This function reflects that, and reduces the time complexity from (m*n) per mode to (m+n) per mode.  This can bring, for example, a 1000x speedup for 1024x1024 arrays.
+- - :func:`~prysm.polynomials.mode_1d_to_2d` for broadcasting a separable 1D mode to a 2D array
+- - :func:`~prysm.polynomials.separable_2d_sequence` for computing a set of separable polynomials, such as the Legendre or Chebyshev polynomials, in 2D, with optimal time complexity.
+- - :code:`/zernike` for Zernike polynomials.  These functions are all re-exported at the root of :code:`polynomials/`:
+- - - Stand-alone functions for the first few terms have been removed, use zernike_nm with one of the naming convention functions to replace the behavior:
+- - - - :func:`piston`
+- - - - :func:`tip`
+- - - - :func:`tilt`
+- - - - :func:`defocus`
+- - - - :func:`primary_astigmatism_00`
+- - - - :func:`primary_astigmatism_45`
+- - - - :func:`primary_coma_y`
+- - - - :func:`primary_coma_x`
+- - - - :func:`primary_spherical`
+- - - - :func:`primary_trefoil_x`
+- - - - :func:`primary_trefoil_y`
+- - - e.g., :code:`for primary_coma_y`, either :code:`zernike_nm(3, 1, ...)` or :code:`zernike_nm(*zernike_noll_to_nm(7), ...)`
+- - - classes :class:`FringeZernike`, :class:`NollZernike`, :class:`ANSI1TermZernike`, :class:`ANSI2TermZernike` have been removed.  Combine :func:`~prysm.polynomials.zernike.zernike_nm` with one of the naming functions to replace the phase synthesis behavior.
+- - - new function :func:`~prysm.polynomials.zernike.zernike_nm_sequence` -- use to compute a series of Zernike polynomials.  Much faster than :func:`~prysm.polynomials.zernike.zernike_nm` in a loop.  Returns a generator, which you may want to exhaust into a list or into a list, then an array.
+
+- - - :func:`~prysm.polynomials.zernike.zernike_norm` for computing the norm of a given Zernike polynomial, given the ANSI order (n, m).
+- - - :func:`~prysm.polynomials.zernike.zero_separation` for computing the minimum zero separation on the domain [0,1] for a Zernike polynomial, given the ANSI order (n, m).
+- - - :func:`~prysm.polynomials.zernike.zernike_nm` for computing a Zernike polynomial, given the ANSI order (n, m).
+- - - :func:`~prysm.polynomials.zernike.zernike_nm_sequence`, the same as :code:`zernike_nm`, but for several polynomials at once.  Much faster than :code:`zernike_nm` in a loop, thanks to the recurrence relation prysm uses to compute Zernikes.
+- - - :func:`~prysm.polynomials.zernike.nm_to_fringe` for converting ANSI (n, m) indices to FRINGE indices, which begin with Z1 for piston.
+- - - :func:`~prysm.polynomials.zernike.nm_to_ansi_j` for converting ANSI (n, m) indices to ANSI j indices (dual to mono index).
+- - - :func:`~prysm.polynomials.zernike.noll_to_nm` for converting the Noll indexing scheme to ANSI (n, m).
+- - - :func:`~prysm.polynomials.zernike.fringe_to_nm` for converting the FRINGE indexing scheme to ANSI (n, m).
+- - - :func:`~prysm.polynomials.zernike.zernikes_to_magnitude_angle_nmkey` for converting a sequence of :code:`[(n1, m1, coef1), ...]` to a dictionary keyed by :code:`(n, |m|)` with the magnitude and angle as the value.  This basically converts the "Cartesian" Zernike polynomials to a polar representation.
+- - - :func:`~prysm.polynomials.zernike.zernikes_to_magnitude_angle` for doing the same as :code:`zernike_to_magnitude_angle_nmkey`, but with dict keys of the form "Primary Coma" and so on.
+- - - :func:`~prysm.polynomials.zernike.nm_to_name` for converting ANSI (n, m) indices to a friendly name like "Primary Trefoil".
+- - - :func:`~prysm.polynomials.zernike.top_n` for identifying the largest N coefficients in a Zernike series.
+- - - :func:`~prysm.polynomials.zernike.barplot` for making a barplot of Zernike polynomials, based on their mono index (Z1..Zn)
+- - - :func:`~prysm.polynomials.zernike.barplot_magnitudes` for doing the same as :code:`barplot`, but with labels of "Tilt", "Power", and so on.
+- - :code:`/cheby` for Chebyshev polynomials.  These functions are all re-exported at the root of :code:`polynomials/`:
+- - - :func:`~prysm.polynomials.cheby.cheby1`, the Chebyshev polynomial of the first kind of order n
+- - - :func:`~prysm.polynomials.cheby.cheby2`, the Chebyshev polynomial of the second kind of order n
+- - - :func:`~prysm.polynomials.cheby.cheby1_sequence`, a sequence of Chebyshev polynomials of the first kind of orders ns; much faster than :code:`cheby1` in a loop.
+- - - :func:`~prysm.polynomials.cheby.cheby2_sequence`, a sequence of Chebyshev polynomials of the second kind of orders ns; much faster than :code:`cheby2` in a loop.
+- - :code:`/legendre` for Legendre polynomials.  These functions are all re-exported at the root of :code:`polynomials/`:
+- - - :func:`~prysm.polynomials.legendre.legendre`, the Legendre polynomial of order n
+- - - :func:`~prysm.polynomials.legendre.legendre_sequence`, a sequence of Legendre polynomials of orders ns; much faster than :code:`legendre` in a loop.
+- - :code:`/jacobi` for Jacobi polynomials.  These functions are all re-exported at the root of :code:`polynomials/`:
+- - - :func:`~prysm.polynomials.jacobi.jacobi`, the Jacobi polynomial of order n with weight parameters alpha and beta
+- - - :func:`~prysm.polynomials.jacobi.jacobi_sequence`, a sequence of Jacobi polynomials of orders ns with weight parameters alpha and beta; much faster than :code:`jacobi` in a loop.
+- - :code:`/qpoly` for Q (Forbes) polynomials.  These functions are all re-exported at the root of :code:`polynomials/`:
+- - - :func:`~prysm.polynomials.qpoly.Qbfs`, the Q best fit sphere polynomial of order n, at normalized radius x.
+- - - :func:`~prysm.polynomials.qpoly.Qbfs_sequence`, the Q best fit sphere polynomials of orders ns, at normalized radius x.  Much faster than :code:`Qbfs` in a loop.
+- - - :func:`~prysm.polynomials.qpoly.Qcon`, the Q best fit sphere polynomial of order n, at normalized radius x.
+- - - :func:`~prysm.polynomials.qpoly.Qcon_sequence`, the Q conic polynomials of orders ns, at normalized radius x.  Much faster than :code:`Qcon` in a loop.
+- - - :func:`~prysm.polynomials.qpoly.Q2d`, the 2D-Q polynomials of order (n, m).  Note that the API is made the same as Zernike by intent, so the sign of m controls whether it is a cosine (+) or sine (-), not a and b coefficients.
+- - - :func:`~prysm.polynomials.qpoly.Q2d_sequence`, the 2D-Q polynomials of orders [(n1, m1), ...].  Much faster than :code:`Q2d` in a loop.
+
 
 propagation
 -----------
 
 - :func:`prop_pupil_plane_to_psf_plane` and :func:`prop_pupil_plane_to_psf_plane_units` have been removed, they were deprecated and marked for removal.
+- Any argument which was :code:`sample_spacing` is now :code:`dx`.
+- Units are no logner fed through astropy units, but are mm for pupil plane dimensions, um for image plane dimensions, and nm for OPD.
+
+psf
+---
+
+The PSF module has changed from being a core part of propagation usage to a module purely for computing criteria of PSFs, such as fwhm, centroid, etc.
+
+- :class:`PSF` has been removed
+- all metrics and measurements have moved from being methods of PSF to top-level functions:
+- - :func:`~prysm.psf.fwhm`
+- - :func:`~prysm.psf.one_over_e`
+- - :func:`~prysm.psf.one_over_e_sq`
+- - :func:`~prysm.psf.estimate_size`
+- - :func:`~prysm.psf.encircled_energy`
+- - :func:`~prysm.psf.centroid`
+- - :func:`~prysm.psf.autocrop`
+- the Airy Disk can be synthesized with :func:`~prysm.psf.airydisk`, or its transfer function with :func:`~prysm.psf.airydisk_ft`
+
+
+pupil
+-----
+
+- this entire submodule has been removed.  To synthesize pupil functions which have given phase and amplitude, combine prysm.geometry with prysm.polynomials or other phase synthesis code.  The function :func:`~prysm.propagation.Wavefront.from_phase_amplitude` largely replicates the behavior of the :code:`Pupil` constructor, with the user generating their own phase and amplitude arrays.
+
+
+segmented
+---------
+
+This is a new module for working with segmented systems.  It contains routines for rasterizing segmented apertures and for working with per-segment phase errors.  prysm's segmented module is considerably faster than anything else in open source, and is approximately constant time in the number of segments.  For the TMT aperture, it is more than 100x faster to rasterize the amplitude than POPPY.  For more information, see `This post <https://www.retrorefractions.com/blog/massively-faster-segmented/>`.  The :doc:`Notable Telescope Apertures <../How-tos/Notable-Telescope-Apertures>` page also contains example usage.
+
+- :class:`~prysm.segmented.CompositeHexagonalAperture`
+- - rasterizes the pupil upon initialization and prepares local coordinate systems for each segment.
+
+A future update will bring fast per-segment phase errors with a clean API.
+
+qpoly
+-----
+
+See the new polynomials module.
+
 
 util
 ----
 
+This module is likely to move to prysm.stats in a future release.
+
 - :func:`~prysm.mathops.is_odd` and :func:`~prysm.mathops.is_power_of_2` have been moved to the mathops module.
+
+
+wavelengths
+-----------
+
+This data-only module has been changed to contain all quantities in units of microns, now that prysm no longer uses astropy.
+
+
+zernike
+-------
+
+See the new polynomials module.
